Canonicalize display/identity per class; fix virtualized-list navigation
Canonicalization (docs/canonicalization-model.md):
- CanonicalSpec on GeneratedClassModel: kind (WIKIDATA_ENTITY | DERIVED),
  identity key fields, and a displayName rule (LABEL | FIELD | TEMPLATE), with
  back-compat inference for legacy models.
- Canonicalizer + generation-time Canonicalization pass so reified atoms show
  their configured displayName (e.g. a Nomination shows its nominee, not the
  reify "{forWork} — {category}" heuristic); wired into GenerateDomainQuery,
  GenerationPipeline (generate + remap) and Load-saved.
- "Identity & label" section on the class panel; reserve name/qid; dedup the
  identity in QuizableFieldPaths (surface name/qid once).
- Root-cause the recurring "two name fields": annotate the generated class's and
  WikidataDynamicObject's `name` @NotQuizableField (it leaked into getAllFields
  and got re-injected as identity).

VirtualizedCardList navigation (reference jumps / search / sort):
- Object-centric hit resolution: discard a recycled/detached cached card and
  resolve the target fresh in its owning list (fixes "reference does nothing"
  when the hit wasn't rendered).
- Pin-the-hit-at-top with bounded scroll-past (last card reaches the top, no
  scroll-into-empty), click-slop so a hand-click wobble isn't eaten as a text
  selection, deferred-repin generation guard (rapid clicks don't fight), O(1)
  indexOf.
- Tests: VirtualizedCardListTest, CanonicalSpecTest, CanonicalizerTest,
  CanonicalizationTest, QuizableFieldPaths dedup.

Tooling: "Remap (no download)" button; NavDebugDemo + click record/replay for
reproducing navigation issues (kept, behind the quiz.nav.debug flag).

Also checkpoints accumulated workbench/model/web work (facets, membership,
transforms, discovery panels, web dataset serving).

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>